# no-multi-attention

./: .gitignore  README.md  README_FULL_EXPERIMENT.md  convert_weights.py  convert_weights_quadratic.py  encrypted_sentence_processor.py  evaluate.py  requirements.txt  run_demo.py  run_experiment.py  run_seal.py  train.py
encrypted/: CMakeLists.txt  README.md  demo_inference.cpp  encrypted_transformer.h  inference_pipeline.cpp  main.cpp  quadratic_inhibitor_attention.cpp  transformer.cpp  transformer_weights.cpp
encrypted/scripts/: .gitkeep  generate_test_weights.cmake
encrypted_SEAL/: CMakeLists.txt  README.md  demo_inference.cpp  encrypted_transformer.cpp  encrypted_transformer.h  inference_pipeline.cpp  main.cpp  quadratic_inhibitor_attention.cpp  transformer.cpp  transformer_weights.cpp
experiments/: README.md  attention_comparison_config.yaml  base_config.yaml
experiments/results-final/attention_comparison_full/attention_comparison_full_20250429_161317/: config.yaml
experiments/results/attention_comparison/attention_comparison_20250402_154320/: config.yaml
experiments/results/attention_comparison/attention_comparison_20250402_154551/: config.yaml
experiments/results/attention_comparison/attention_comparison_test_20250402_155542/: all_results.json  config.yaml  results_inhibitor.json  results_standard.json
experiments/results/attention_comparison/attention_comparison_test_20250402_160525/: all_results.json  results_inhibitor.json  results_quadratic_inhibitor.json  results_standard.json
experiments/results/attention_comparison/quadratic_inhibitor_attention/checkpoint-1/: config.yaml
experiments/results/attention_comparison_full/approx_exp_attention/final_model/: config.yaml
experiments/results/attention_comparison_full/attention_comparison_full_20250402_161632/: config.yaml
experiments/results/attention_comparison_full/attention_comparison_full_20250402_170148/: config.yaml
experiments/results/attention_comparison_full/attention_comparison_full_20250402_170644/: results_standard.json
experiments/results/attention_comparison_full/attention_comparison_full_20250402_171533/: config.yaml  results_standard.json
experiments/results/attention_comparison_full/attention_comparison_full_20250402_171751/: all_results.json  results_consmax.json  results_inhibitor.json  results_quadratic_inhibitor.json  results_standard.json  results_summary.csv
experiments/results/attention_comparison_full/attention_comparison_full_20250402_172925/: all_results.json  results_approx_exp.json  results_summary.csv
experiments/results/attention_comparison_full/attention_comparison_full_20250402_173816/: config.yaml
experiments/results/attention_comparison_full/attention_comparison_full_20250402_173826/: all_results.json  config.yaml  results_standard.json  results_standard_relu.json  results_summary.csv
experiments/results/attention_comparison_full/attention_comparison_full_20250402_174228/: all_results.json  results_quadratic_inhibitor_relu.json  results_standard.json  results_summary.csv
experiments/results/attention_comparison_full/attention_comparison_full_20250429_124537/: config.yaml  results_standard.json
experiments/results/attention_comparison_full/attention_comparison_full_20250429_125645/: results_inhibitor.json
experiments/results/attention_comparison_full/attention_comparison_full_20250429_125826/: config.yaml
experiments/results/attention_comparison_full/attention_comparison_full_20250429_145022/: config.yaml
experiments/results/attention_comparison_full/inhibitor_attention/final_model/: config.yaml
experiments/results/attention_comparison_full/quadratic_inhibitor_attention_relu_activation/checkpoint-3/: config.yaml
experiments/results/attention_comparison_full/standard_attention/final_model/: config.yaml
models/: base_model.py  bert_model.py
models/attention/: README.md  approx_exp_attention.py  consmax_attention.py  inhibitor_attention.py  quadratic_inhibitor_attention.py  standard_attention.py
